Pflichtenheft: Fix SVG mockups (no visible change)
Previous to this commit, Firefox wouldn’t render the SVGs for several
reasons:

1. The xmlns was missing
2. Firefox doesn’t assume implicit size unit “px” for font-size
3. Firefox doesn’t interpret a “font-size="12px"” tag as a
   “font-size: 12px;” style

These are all valid issues that librsvg and cairosvg just silently
ignored.

--- a/pflichtenheft/ui.css
+++ b/pflichtenheft/ui.css
@@ -1,5 +1,6 @@
 text {
     font-family: sans;
+    font-size: 12px;
 }
 
 text.centered {
@@ -29,7 +30,7 @@ text.disabled {
 }
 
 text.labelnumber {
-    font-size: 11;
+    font-size: 11px;
     fill: red;
 }
 
@@ -49,4 +50,12 @@ rect.selected {
 
 text.selected {
     font-weight: bold;
+}
+
+text.normalarrow {
+    font-size: 12px;
+}
+
+text.smallarrow {
+    font-size: 10px;
 }
